# GalinaceosApi

./: conexaoDb.txt  config.py  filtros.txt  main.py  pyproject.toml
app/: __init__.py
app/controllers/: galinaceos_controller.py
app/helpers/application/: __init__.py
app/helpers/database/: __init__.py
app/models/: __init__.py  classe_galinaceos.py  galinaceos.py  sistema_criacao.py  territorio.py
app/repository/: galinaceos_repository.py
app/schemas/: galinaceos_schema.py
app/services/: galinaceos_service.py
seeds/: seed.py
