[project]
name = "ceosapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow>=4.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]
